@startuml class_model
title Class Diagram --vc::device

skinparam backgroundColor #FAFAFA
skinparam classBackgroundColor #EBF3FB
skinparam classBorderColor #2E75B6
skinparam classHeaderBackgroundColor #3e6d99
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #1F1F1F
skinparam arrowColor #1F4E79
skinparam packageBackgroundColor #F5F5F5
skinparam packageBorderColor #AAAAAA
skinparam shadowing false

package "vc::device" {

    enum TaskType {
        UndefinedTask
        LocalizationTask
        PickAndPlaceTask
        InspectTask
    }

    enum CameraSourceType {
        Source_Owned
        Source_Shared
    }

    class ITask << QObject, abstract >> {
        + {abstract} taskType() : TaskType
        + {abstract} isValid() : bool
        + {abstract} startTask() : bool
        + {abstract} stopTask() : void

        + id(void) : QString
        + name(void) : QString
        + setName(QString&) : void
        
        + cameraSourceType(void) : CameraSourceType
        + setCamearSourceType(CameraSourceType) : void
        + isOwned() : bool
        + isShared() : bool
        + ownedCameraId() : QString
        + setOwnedCameraId(QString) : void
        
        + setDeviceConfig(ITaskConfig*) : void
        + taskConfig() : ITaskConfig*

        + toJson() : QJsonObject
        + fromJson(QJsonObject&) : bool
    }

    class ITaskConfig << abstract >> {
        + {abstract} getMetaOject() : QMetaObject
        + {abstract} taskType() : TaskType
        + {abstract} toJson() : QJsonObject
        + {abstract} fromJson(QJsonObject&) : bool
        + {abstract} copy() : ITaskConfig*
    }

    class TaskLocalization << ITask >> {        
        .. using QMap to store calibration matrix for each registered camera..
        + camera_register_list
        + camera_calibration : Map

        + pattern_register

        + output_coordinate_device
    }

}

' Inheritance
ITask             <|-- TaskLocalization

' Enum usage
ITask             --> TaskType           : task type
ITaskConfig       --> TaskType           : task type

' Dependencies
' DeviceFactory       ..> IDevice                 : returns
ITask             ..> ITaskConfig               : config

@enduml
